# Starlynn

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: ci.yml
src/: attacks.rs  bench.rs  bitboard.rs  chess_move.rs  eval.rs  main.rs  movegen.rs  node.rs  pos_state.rs  position.rs  search.rs  types.rs  uci.rs  utils.rs
src/chess/: attacks.rs  bitboard.rs  chess_move.rs  mod.rs  move_gen.rs  perft.rs  pos_state.rs  position.rs  types.rs  util.rs
src/nn/: accumulator.rs  both_accumulators.rs  mod.rs  moves_map.rs  params.rs  value_policy_heads.rs
src/search/: bench.rs  eval.rs  limits.rs  mod.rs  move_picker.rs  move_sorting.rs  params.rs  search.rs  searcher.rs  thread_data.rs  tt.rs  tt_entry.rs
